general/container-allowed-images/tests/ephemeral_containers_disallowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
  - name: main-container
    image: allowedrepo/some-image:tag

  ephemeralContainers:
  - name: ephemeral-container-1
    image: notallowedrepo/some-other-image:tag
  - name: ephemeral-container-2
    image: notallowedrepo/some-other-image:tag-2
